# interbotix_ros_turrets

./: README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
interbotix_ros_xsturrets/: README.md
interbotix_ros_xsturrets/examples/interbotix_xsturret_object_tracker/: CMakeLists.txt  README.md  package.xml
interbotix_ros_xsturrets/examples/interbotix_xsturret_object_tracker/config/: hsv.csv  lifecam.yaml  modes.yaml
interbotix_ros_xsturrets/examples/interbotix_xsturret_object_tracker/launch/: camera_calibration.launch  xsturret_object_tracker.launch
interbotix_ros_xsturrets/examples/interbotix_xsturret_object_tracker/scripts/: xsturret_ar_tracker  xsturret_color_tracker  xsturret_color_tracker_calibrator
interbotix_ros_xsturrets/examples/interbotix_xsturret_simple_interface/: CMakeLists.txt  README.md  package.xml  setup.py
interbotix_ros_xsturrets/examples/interbotix_xsturret_simple_interface/config/: modes.yaml
interbotix_ros_xsturrets/examples/interbotix_xsturret_simple_interface/launch/: xsturret_simple_interface.launch
interbotix_ros_xsturrets/examples/interbotix_xsturret_simple_interface/msg/: TurretJoy.msg
interbotix_ros_xsturrets/examples/interbotix_xsturret_simple_interface/scripts/: xsturret_simple_interface_gui
interbotix_ros_xsturrets/examples/interbotix_xsturret_simple_interface/src/: xsturret_simple_interface_joy.cpp
interbotix_ros_xsturrets/examples/python_demos/: README.md  turret_mixed_profile_control.py  turret_time_profile_control.py  turret_velocity_profile_control.py
interbotix_ros_xsturrets/install/: xsturret_remote_install.sh
interbotix_ros_xsturrets/install/amd64/: xsturret_amd64_install.sh
interbotix_ros_xsturrets/install/rpi4/: xsturret.desktop  xsturret_rpi4_boot.service  xsturret_rpi4_install.sh  xsturret_rpi4_launch.sh
interbotix_ros_xsturrets/interbotix_ros_xsturrets/: CMakeLists.txt  README.md  package.xml
interbotix_ros_xsturrets/interbotix_xsturret_control/: CMakeLists.txt  README.md  package.xml
interbotix_ros_xsturrets/interbotix_xsturret_control/config/: modes.yaml  vxxms.yaml  wxxmd.yaml
interbotix_ros_xsturrets/interbotix_xsturret_control/demos/: README.md  turret_mixed_profile_control.py  turret_time_profile_control.py  turret_velocity_profile_control.py
interbotix_ros_xsturrets/interbotix_xsturret_control/launch/: xsturret_control.launch  xsturret_control.launch.py
interbotix_ros_xsturrets/interbotix_xsturret_descriptions/: CMakeLists.txt  README.md  package.xml
interbotix_ros_xsturrets/interbotix_xsturret_descriptions/launch/: remote_view.launch  remote_view.launch.py  xsturret_description.launch  xsturret_description.launch.py
interbotix_ros_xsturrets/interbotix_xsturret_descriptions/meshes/pxxls_cam_meshes/: camera.stl  tilt.stl
interbotix_ros_xsturrets/interbotix_xsturret_descriptions/meshes/pxxls_meshes/: tilt.stl
interbotix_ros_xsturrets/interbotix_xsturret_descriptions/meshes/vxxmd_meshes/: tilt.stl
interbotix_ros_xsturrets/interbotix_xsturret_descriptions/meshes/vxxms_meshes/: pan.stl  vxxms_tilt.stl
interbotix_ros_xsturrets/interbotix_xsturret_descriptions/meshes/wxxmd_meshes/: wxxmd_tilt.stl
interbotix_ros_xsturrets/interbotix_xsturret_descriptions/meshes/wxxms_meshes/: tilt.stl
interbotix_ros_xsturrets/interbotix_xsturret_descriptions/rviz/: xsturret_description.rviz
interbotix_ros_xsturrets/interbotix_xsturret_descriptions/urdf/: control.urdf.xacro  gazebo_configs.urdf.xacro  pxxls.urdf.xacro  pxxls_cam.urdf.xacro  vxxmd.urdf.xacro  vxxms.urdf.xacro  wxxmd.urdf.xacro  wxxms.urdf.xacro
interbotix_ros_xsturrets/interbotix_xsturret_gazebo/: CMakeLists.txt  package.xml
interbotix_ros_xsturrets/interbotix_xsturret_gazebo/config/: interbotix_texture.gazebo
interbotix_ros_xsturrets/interbotix_xsturret_gazebo/config/position_controllers/: wxxms_position_controllers.yaml
interbotix_ros_xsturrets/interbotix_xsturret_gazebo/launch/: xsturret_gazebo.launch
interbotix_ros_xsturrets/interbotix_xsturret_sim/: CMakeLists.txt  README.md  package.xml
interbotix_ros_xsturrets/interbotix_xsturret_sim/config/position_controllers/: pxxls_cam_position_controllers.yaml  pxxls_position_controllers.yaml  vxxmd_position_controllers.yaml  vxxms_position_controllers.yaml  wxxmd_position_controllers.yaml  wxxms_position_controllers.yaml
interbotix_ros_xsturrets/interbotix_xsturret_sim/launch/: xsturret_gz_classic.launch.py
