<?xml version="1.0"?>
<package format="2">
  <name>interbotix_xsturret_control</name>
  <version>0.0.0</version>
  <description>The interbotix_xsturret_control package</description>
  <maintainer email="trsupport@trossenrobotics.com">Luke Schmitt</maintainer>
  <license>BSD</license>
  <author email="trsupport@trossenrobotics.com">Solomon Wiznitzer</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>interbotix_xs_sdk</depend>
  <depend>interbotix_xs_modules</depend>
  <depend>interbotix_xsturret_descriptions</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
